[gd_scene load_steps=4 format=3 uid="uid://bx8bydiyr4pca"]

[ext_resource type="Script" uid="uid://ccrnvmrd2ma64" path="res://main_menu.gd" id="1_06t4h"]
[ext_resource type="PackedScene" uid="uid://bgtxrcisn2fbh" path="res://Themes/options_menu.tscn" id="2_7vrkn"]
[ext_resource type="Theme" uid="uid://yb0k0548rsyn" path="res://spinboxTheme.tres" id="2_fu7sn"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_06t4h")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Control4" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_fu7sn")
current_tab = 0

[node name="Levels" type="TabBar" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
metadata/_tab_index = 0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer"]
layout_mode = 2

[node name="SafeLandingSpeedLabel2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.45

[node name="Level1" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Level 1"

[node name="Level2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Level 2"

[node name="Level3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Level 3"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Exit"

[node name="SupportDev" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Support Dev"

[node name="Options" parent="PanelContainer/VBoxContainer/HBoxContainer/TabContainer" instance=ExtResource("2_7vrkn")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/TabContainer/Levels/PanelContainer/VBoxContainer/SupportDev" to="." method="_on_support_dev_pressed"]
